--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,6 +1,5 @@
-body {
-    background: linear-gradient(rgb(187, 68, 68), rgb(231, 112, 112)
-    );
+main {
+    background-color: #293D45;
 }
 
 .main {
@@ -10,29 +9,39 @@ body {
 
 .carousel {
     align-items: center;
+
     display: inherit;
 }
 
 .artistInfo {
-    font: black;
-    background: rgba(207, 22, 22, 0.705);
+    color: #fff;
+    background: #073245;
     border-style: solid;
-    border-color: rgb(247, 243, 243);
+    border-color: #566266;
     border-width: 1px;
 }
 
 .topSongs {
-    font: black;
-    background: rgba(207, 22, 22, 0.705);
+    color: #fff;
+    background: #073245;
     border-style: solid;
-    border-color: rgb(241, 239, 239);
+    border-color: #566266;
     border-width: 1px;
 }
 
 .albums {
-    font: black;
-    background: rgba(207, 22, 22, 0.705);
+    color: #fff;
+    background: #073245;
     border-style: solid;
-    border-color: rgb(245, 240, 240);
+    border-color: #566266;
     border-width: 1px;
+}
+
+.header-footer {
+    background-color: #073245;
+}
+
+.inputColor {
+    background-color: #073245;
+    filter:brightness(85%);
 }
