--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -6,13 +6,12 @@ body {
 
 .container {
     background-color: gray;
-    color: black;
 }
 
 .main {
     display: flex;
     flex-wrap: wrap;
-
+    text-align: center;
 }
 
 .carousel {
@@ -24,6 +23,8 @@ body {
 }
 
 .artistInfo {
+    width: 300px;
+    height: 300px;
     background: #073245;
     border-style: solid;
     border-color: #566266;
@@ -39,6 +40,8 @@ body {
 }
 
 .topSongs {
+    width: 300px;
+    height: 300px;
     background: #073245;
     border-style: solid;
     border-color: #566266;
@@ -46,6 +49,8 @@ body {
 }
 
 .albums {
+    width: 300px;
+    height: 300px;
     background: #073245;
     border-style: solid;
     border-color: #566266;
@@ -57,6 +62,8 @@ body {
 }
 
 #bio {
+    width: 700px;
+    height: 400px;
     background: #073245;
     border-style: solid;
     border-color: #566266;
@@ -68,6 +75,8 @@ body {
 }
 
 #related {
+    width: 700px;
+    height: 400px;
     background: #073245;
     border-style: solid;
     border-color: #566266;
@@ -88,45 +97,3 @@ body {
 }
 
 
-.stats {
-    background: linear-gradient(45deg, #000000e0, #35d3b6cc);
-    color: #ffffffc9;
-    font-size: large;
-    font-weight: 600;
-    text-shadow: 2px 2px 3px #4a4a4a;
-}
-
-
-/*
-#stat1 {
-    background: linear-gradient(45deg, #000000e0, #35d3b6cc);
-    color: #ffffffc9;
-    font-size: large;
-    font-weight: 600;
-    text-shadow: 2px 2px 3px #4a4a4a;
-}
-
-#stat2 {
-    background: linear-gradient(45deg, #000000e0, #35d3b6cc);
-    color: #ffffffc9;
-    font-size: large;
-    font-weight: 600;
-    text-shadow: 2px 2px 3px #4a4a4a;
-}
-
-#stat3 {
-    background: linear-gradient(45deg, #000000e0, #35d3b6cc);
-    color: #ffffffc9;
-    font-size: large;
-    font-weight: 600;
-    text-shadow: 2px 2px 3px #4a4a4a;
-}
-
-#stat4 {
-    background: linear-gradient(45deg, #000000e0, #35d3b6cc);
-    color: #ffffffc9;
-    font-size: large;
-    font-weight: 600;
-    text-shadow: 2px 2px 3px #4a4a4a;
-}
-*/
