--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,20 +1,22 @@
-main {
+body {
     background-color: #293D45;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
-<<<<<<< HEAD
-=======
 .container {
     background-color: gray;
     color: black;
 }
 
->>>>>>> 9ebb52075cdbb60b3e2103b5c958df65f46a4d6a
 .main {
     display: flex;
     flex-wrap: wrap;
     color: #fff;
-
+    flex-grow: 1;
 }
 
 .carousel {
@@ -101,6 +103,18 @@ main {
     text-shadow: 2px 2px 3px #4a4a4a;
 }
 
+footer {
+    display: flex;
+    align-items: flex-end;
+    /* position: absolute;
+    bottom: 0;
+    width: 100%; */
+  }
+  
+  .responsive {
+    max-width: 60px;
+    max-height: 60px;
+  }
 
 /*
 #stat1 {
