--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -95,13 +95,13 @@ body {
 }
 
 
-.stats {
+/* .stats {
     background: linear-gradient(45deg, #000000e0, #35d3b6cc);
     color: #ffffffc9;
     font-size: large;
     font-weight: 600;
     text-shadow: 2px 2px 3px #4a4a4a;
-}
+} */
 
 footer {
     display: flex;
@@ -112,8 +112,8 @@ footer {
   }
   
   .responsive {
-    max-width: 60px;
-    max-height: 60px;
+    max-width: 100%;
+    height: auto;
   }
 
 /*
