fixed all remaining HTML and CSS bugs

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -116,10 +116,10 @@ body {
     font-size: large;
     font-weight: 600;
     text-shadow: 2px 2px 3px #4a4a4a;
-} */
+}
 
 #artistImg {
-    max-width: 200px;
+    max-width: 300px;
 }
 
 footer {
