--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-color: #293D45;
     min-height: 100vh;
@@ -141,6 +145,12 @@ footer {
     font-size: large;
     font-weight: 600;
     text-shadow: 2px 2px 3px #4a4a4a;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+
 }
 
 @media screen and (max-width: 600px;) {
