--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -43,6 +43,7 @@ body {
     border-style: solid;
     border-color: #566266;
     border-width: 1px;
+    border-radius: 25px;
 }
 
 #artistName {
@@ -61,6 +62,11 @@ body {
     border-style: solid;
     border-color: #566266;
     border-width: 1px;
+    border-radius: 25px;
+}
+
+.artistImage {
+    border-radius: 25px;
 }
 
 .albums {
@@ -71,6 +77,7 @@ body {
     border-style: solid;
     border-color: #566266;
     border-width: 1px;
+    border-radius: 25px;
 }
 
 #knownAlbum {
@@ -83,6 +90,7 @@ body {
     border-style: solid;
     border-color: #566266;
     border-width: 1px;
+    border-radius: 25px;
 }
 
 #bio-text {
@@ -95,6 +103,7 @@ body {
     border-style: solid;
     border-color: #566266;
     border-width: 1px; 
+    border-radius: 25px;
 }
 
 #related-text {
