--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -86,6 +86,10 @@ body {
     background: #566266;
 }
 
+#relatedArtist li:hover {
+    cursor: pointer;
+}
+
 #related {
     width: 500px;
     height: 350px;
