made new files for mobile version

--- a/mobile/mobile.css
+++ b/mobile/mobile.css
@@ -12,7 +12,9 @@ body {
 }
 
 .custom-carousel {
-    height: unset;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .main {
@@ -63,9 +65,8 @@ body {
 
 .row {
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
 }
 
 #bio {
@@ -149,49 +150,4 @@ footer {
 .responsive {
     max-width: 60px;
     max-height: 60px;
-}
-
-
-/* Tablets*/
-@media screen and (max-width: 992px) {
-    header {
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-    main {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-}
-
-/* Large smartphones*/
-@media screen and (max-width: 768px) {
-    header {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        flex-wrap: wrap;
-    }
-    main {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-}
-
-/* Small smartphones*/
-@media screen and (max-width: 576px) {
-    header {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        flex-wrap: wrap;
-    }
-    main {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
 }
