made mobile version formatted

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -43,7 +43,9 @@ body {
     border-radius: 25px;
 }
 
-.albums, .topSongs, .artistInfo {
+.albums,
+.topSongs,
+.artistInfo {
     width: 300px;
     min-height: 300px;
     background: #073245;
@@ -53,7 +55,10 @@ body {
     border-radius: 25px;
 }
 
-.trackList, .albumList, #bioInfo, #relatedArtist {
+.trackList,
+.albumList,
+#bioInfo,
+#relatedArtist {
     background: #566266;
 }
 
@@ -96,7 +101,7 @@ body {
     background: #073245;
     border-style: solid;
     border-color: #566266;
-    border-width: 1px; 
+    border-width: 1px;
     border-radius: 25px;
 }
 
@@ -110,7 +115,7 @@ body {
 
 .inputColor {
     background-color: #073245;
-    filter:brightness(85%);
+    filter: brightness(85%);
 }
 
 .stats {
@@ -128,9 +133,6 @@ body {
 footer {
     display: flex;
     align-items: flex-end;
-    /* position: absolute;
-    bottom: 0;
-    width: 100%; */
 }
 
 .cat {
@@ -174,6 +176,7 @@ footer {
         align-items: center;
         flex-wrap: wrap;
     }
+
     main {
         display: flex;
         flex-direction: column;
@@ -189,6 +192,7 @@ footer {
         align-items: center;
         flex-wrap: wrap;
     }
+
     main {
         display: flex;
         flex-direction: column;
