--- a/mobile/mobile.css
+++ b/mobile/mobile.css
@@ -9,6 +9,7 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .custom-carousel {
@@ -19,7 +20,8 @@ body {
 
 .main {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
     color: #fff;
     flex-grow: 1;
@@ -45,7 +47,9 @@ body {
     border-radius: 25px;
 }
 
-.albums, .topSongs, .artistInfo {
+.albums,
+.topSongs,
+.artistInfo {
     width: 300px;
     min-height: 300px;
     background: #073245;
@@ -55,7 +59,10 @@ body {
     border-radius: 25px;
 }
 
-.trackList, .albumList, #bioInfo, #relatedArtist {
+.trackList,
+.albumList,
+#bioInfo,
+#relatedArtist {
     background: #566266;
 }
 
@@ -63,11 +70,6 @@ body {
     background: #566266;
 }
 
-.row {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
 
 #bio {
     width: 500px;
@@ -97,7 +99,7 @@ body {
     background: #073245;
     border-style: solid;
     border-color: #566266;
-    border-width: 1px; 
+    border-width: 1px;
     border-radius: 25px;
 }
 
@@ -105,13 +107,16 @@ body {
     background: #566266;
 }
 
-#header-footer {
+.header-footer {
     background-color: #073245;
+    width: 100%;
 }
 
 .inputColor {
     background-color: #073245;
-    filter:brightness(85%);
+    filter: brightness(85%);
+    width: 100%;
+    background-color: #073245;
 }
 
 .stats {
@@ -129,9 +134,13 @@ body {
 footer {
     display: flex;
     align-items: flex-end;
-    /* position: absolute;
-    bottom: 0;
-    width: 100%; */
+    width: 100%;
+    background-color: #073245;
+}
+
+header {
+    width: 100%;
+    background-color: #073245;
 }
 
 .cat {
